# pyPERSA

./: .gitignore  README.md  convert_tap.py  pyPERSA.py  pyproject.toml
examples/: convert_tap.py  convert_taps.py  create_tap.py  create_taps.py  distribute_wopwop_inputs.py
src/pyPERSA/: __init__.py  facet_reader.py  facet_to_extracts.py  read_taps.py  write_extracts.py
