[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyPERSA"
version = "0.0.1"
authors = [
  { name="Adam Rozman", email="admrozman@gmail.com"},
]
description = "Package for converting Helios Tap files into permeable surfaces for PSU-WOPWOP"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "numpy",
  "pywopwop @ git+https://github.com/adrozman/pywopwop.git"
]

[tool.setuptools.packages.find]
where = ["src"]
